# datos

./: .gitignore  README.md
Informe/: Caratula.docx  LOG.txt  Log de instancias anomalas en X e Y.txt
csv_scripts/: 49ers.py  SFG.py  filter-objects-pandas.py  ploteos.py  prueba.py  sssr.py
entrega/: CMakeLists.txt  CsvReader.cpp  CsvReader.h  Predictor.cpp  Predictor.h  compile.sh  header.txt  main.cpp  submission.sh
perceptron/: perceptron.py
